--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "chart.js": "^4.5.0",
     "framer-motion": "^12.19.2",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-force-graph-2d": "^1.27.1",
     "react-icons": "^5.5.0",
+    "react-parallax-tilt": "^1.7.299",
     "react-simple-typewriter": "^5.0.1",
+    "react-toast": "^1.0.3",
+    "react-toastify": "^11.0.5",
     "react-tsparticles": "^2.12.2",
     "tailwindcss": "^4.1.11",
     "tsparticles": "^3.8.1"
